Fix Gray BG not showing

--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -142,7 +142,7 @@ img.header-img{
 	color: white
 }
 
-.bg-gray{
+.bg-dark-gray{
 	background-color: rgba(40,38,40,1) !important;
 	color: white
 }
